# T-Glass-Applications

./: .gitignore  README.md
ancs_app/: README.md  sdkconfig  sdkconfig.old  sdkconfig.thatproject
ancs_app/main/: CMakeLists.txt  ancs_app.c  battery_measurement.c  ble_ancs.c  jd9613.c  main.c  nvs_manager.c  t_glass.c
ancs_app/main/include/: ancs_app.h  battery_measurement.h  ble_ancs.h  jd9613.h  nvs_manager.h  t_glass.h
image_capture_app/: README.md  sdkconfig.old
image_capture_app/main/: CMakeLists.txt  battery_measurement.c  ble_server.c  idf_component.yml  main.c  rtc_pcf85063.c  t_glass.c
image_capture_app/main/include/: battery_measurement.h  ble_server.h  rtc_pcf85063.h  t_glass.h
image_capture_app/t_glass_ble_app/: README.md  pubspec.yaml
image_capture_app/t_glass_ble_app/lib/: main.dart
image_capture_app/t_glass_ble_app/macos/Flutter/: GeneratedPluginRegistrant.swift
image_capture_app/t_glass_ble_app/macos/Runner/: Info.plist
image_capture_app/t_glass_ble_app/macos/Runner.xcodeproj/: project.pbxproj
image_capture_app/t_glass_ble_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
image_capture_app/t_glass_ble_app/macos/Runner/Configs/: AppInfo.xcconfig
image_capture_app/t_glass_ble_app/windows/: CMakeLists.txt
image_capture_app/t_glass_ble_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
image_capture_app/t_glass_ble_app/windows/runner/: Runner.rc  main.cpp
